# propeller-optimization

./: README.md  polar.txt  pyproject.toml  qprop_singlepoint_output.txt  simple_prop_test.txt
low_reynolds_test/: polar_1000e3.txt  polar_100e3.txt  polar_150e3.txt  polar_200e3.txt  polar_250e3.txt  polar_300e3.txt  polar_350e3.txt  polar_400e3_RODAR_ALPHA.txt  polar_450e3.txt  polar_500e3_verificar.txt  polar_50e3.txt  polar_550e3_verificar.txt  polar_600e3.txt  polar_60e3.txt  polar_700e3.txt  polar_70e3.txt  polar_800e3.txt  polar_80e3.txt  polar_90e3.txt
src/APC_Finder/: apc_propeller_finder.py
src/Database/: xfoil_database_single_perfil.csv
src/Database/Airfoils_geometry/: 050.bl  100.bl  900.bl  :00.bl  QUIT  input.in  polar_temp.txt
src/Database/qprop_aerodynamic_coef/: qprop_aerodynamic_database.csv
src/Parametrization/: airfoil.py  propeller.py
src/QPROP_wrapper/: README.md  qprop_wrapper.py  qprop_writer.py
src/XFOIL_wrapper/: database_writter.py  xfoil_wrapper.py
test_cases/qprop_fit_aerodynamic_data/: qprop_database_fit.py  qprop_test_fit.py
test_cases/run_qprop/: qprop_singlepoint_output.txt
test_cases/run_qprop_test/: CAM6x3F.txt  qcon.def
test_cases/run_xfoil/: run_xfoil.py
test_cases/write_simple_file/: motor_draconis_1300KV.txt  qprop_singlepoint_output.txt  simple_prop_test.txt  write_test.py
