[tool.poetry]
name = "propeller-optimization"
version = "0.1.0"
description = ""
authors = ["DuncanZancanella <duncanbressanz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
matplotlib = "^3.10.8"
pandas = "^3.0.0"
scipy = "^1.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
